components/61-layouts/detail-layout/_detail-layout.scss
.detail-layout {
  @extend %content-container;

  font-size: .9rem;
  line-height: 1.8;

  // Give each direct child a specific width.
  // This is a fallback width given to all children of the detail layout.
  .w7-o2,
  > * {
    @include desktop {
      @include set-layout('width-7', 'offset-2');
    }
  }

  > .content-header-container {
    margin-right: -20px;
    margin-left: -20px;

    @include tablet {
      width: calc(100% + 255px * 2);
      margin-left: -255px;
      padding-right: 255px;
      padding-left: 255px;
    }

    &.accolade-title {
      @include tablet {
        // Set max width because the absolute title gets out of boundary.
        .left {
          max-width: calc(100% - (135px * 2 + 20px));
        }
      }
    }

    & + .summary-box,
    & + .table-of-contents {
      position: relative;
      z-index: 1;
    }

    &.image {
      & + .summary-box,
      & + .table-of-contents {
        margin: 20px 0 40px;

        @include tablet {
          margin: 120px 0 40px;
        }

        @include desktop {
          max-width: calc($bp-max-content - 480px - 60px);
          margin: -205px 0 100px;
        }
      }
    }

    &:not(.image) {
      // @todo: + .teasers
      & + .summary-box,
      & + .table-of-contents,
      & + .partner-block {
        @include set-layout('width-12');

        margin-top: -150px;

        @include tablet {
          margin-top: -120px;
        }
      }

      + .partner-block {
        max-width: 100%;
        padding: 20px;
        background-color: color('white');

        @include tablet {
          padding: 60px;
        }
      }
    }
  }

  > div:not(.content-header-container),
  > section,
  > aside,
  > article,
  > nav {
    margin-top: 60px;
    margin-bottom: 60px;
  }

  > ul,
  > ol {
    padding-left: 20px;
  }

  .w9-o1 {
    @include desktop {
      @include set-layout('width-9', 'offset-1');
    }
  }

  .w10-o1,
  > .highlight,
  > .image-gallery--wrapper.multiple {
    @include desktop {
      @include set-layout('width-10', 'offset-1');
    }
  }

  > ul.accordion {
    @include desktop {
      @include set-layout('width-7', 'offset-2');
    }

    .accordion--content p {
      line-height: 1.75;
    }
  }

  > .partner-block {
    @include desktop {
      @include set-layout();
    }
  }

  > .quote-wrapper {
    @include desktop {
      @include set-layout();

      > .quote {
        @include set-layout('width-7', 'offset-4');
      }
    }
  }

  > .cta-block {
    @include desktop {
      @include set-layout('width-11', 'offset-1');
    }

    &.image-left,
    &.image-right {
      @include set-layout('width-12');
    }
  }

  > div.responsive-table {
    margin-top: 20px;
    margin-bottom: 20px;
  }

  > .table-of-contents {
    margin-top: 60px;
    margin-bottom: 60px;
  }

  > .contact-details {
    @include set-layout();
  }

  .w12,
  > .timeline-wrapper,
  > .programme-wrapper {
    @include set-layout();
    @include extra-wide;
  }

  .readspeaker-button {
    display: block;
    width: auto;
    margin-top: -8px;
    margin-bottom: 40px;
  }

  .openinghours-widget[data-type="month"] {
    @include desktop {
      @include month-widget-mobile;
    }

    @include breakpoint(1200px) {
      @include month-widget-desktop;
    }
  }

  > .full-width {
    @include full-width;
  }
}

$bulb-image-width: 120px;

aside.top,
aside.bottom {
  @extend %content-container;

  > * {
    margin-top: 60px;
    margin-bottom: 60px;

    @include tablet {
      margin-bottom: 120px;
    }

    @include desktop {
      @include set-layout();
      width: 100%;

      // Related teasers box should be wider.
      &:not(.related-box-teasers) {
        margin-left: 0;
        padding-right: span(2 wide of 12);
        padding-left: span(2 wide of 12);
      }
    }
  }

  > p {
    padding-top: 0;
    border-top: 0;
  }
}

aside.top {
  position: relative;
  margin: 100px auto 0;
}

aside.bottom {
  .changed-date {
    @include desktop {
      @include set-layout('width-9', 'offset-2');
    }

    padding: 0;
  }
}

